--- a/src/styles/projets.scss
+++ b/src/styles/projets.scss
@@ -3,7 +3,7 @@
 #projetsSection {
 	@include mixins.section();
 
-	// overflow: hidden;
+	overflow: hidden;
 
 	min-height: calc(100vh - variables.$header-size);
 	box-shadow: 0px -5px 5px 0px rgba(0, 0, 0, 0.1);
